@startuml

title __TRANSACTIONS's Class Diagram__\n

  package model {
    package model.transactions {
      class DepositTransaction {
          + DepositTransaction()
          + getAcc()
          + toString()
      }
    }
  }
  

  package model {
    package model.transactions {
      class PayBillTransaction {
          - payeeName : String
          + PayBillTransaction()
          + getSource()
          + getPayeeName()
          + toString()
      }
    }
  }
  

  package model {
    package model.transactions {
      abstract class Transaction {
          - amount : double
          - transTime : Date
          ~ Transaction()
          + getAmount()
          + getDate()
          ~ getDateStr()
      }
    }
  }
  

  package model {
    package model.transactions {
      class TransferTransaction {
          + TransferTransaction()
          + getFromAcc()
          + getToAcc()
          + toString()
      }
    }
  }
  

  package model {
    package model.transactions {
      class WithdrawTransaction {
          + WithdrawTransaction()
          + getAcc()
          + toString()
      }
    }
  }
  

  DepositTransaction -up-|> Transaction
  DepositTransaction o-- Account : acc
  PayBillTransaction -up-|> Transaction
  PayBillTransaction o-- Account : source
  TransferTransaction -up-|> Transaction
  TransferTransaction o-- Account : fromAcc
  TransferTransaction o-- Account : toAcc
  WithdrawTransaction -up-|> Transaction
  WithdrawTransaction o-- Account : acc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
